Completed Artist Analytics module